--- a/StorageMember/StorageMember.csproj
+++ b/StorageMember/StorageMember.csproj
@@ -39,10 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BJTable.cs" />
     <Compile Include="Depots.cs" />
     <Compile Include="Devices.cs" />
     <Compile Include="Employees.cs" />
+    <Compile Include="HCTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YBTools.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DatabaseScanner\DatabaseScanner.csproj">
